<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bgr_popup_detail"
    android:gravity="center_horizontal"
    tools:context=".ui.task.TaskDetailPopupFragment">

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/task_description"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvTaskDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/deadline_01_01_2025_12_00"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvTaskStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"

        android:text="@string/status"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCloseDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng"
        android:layout_marginTop="20dp" />

</LinearLayout>